bases/apps/torrents/sonarr/sonarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector: 
    app: sonarr
  type: ClusterIP
  ports:
  - port: 8989
    targetPort: 8989
